--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
     <main>
       <!-- Banner section started -->
 
-      <section class="banner">
+      <!-- <section class="banner">
         <h1 class="banner__title">nike</h1>
         <p class="banner__text">Крутые кроссовки от NIKE для вас</p>
-      </section>
+      </section> -->
 
       <!-- Banner section finished -->
 
       <!----------------------------------------- Category start ------------------------------------>
 
-      <section class="category">
+      <!-- <section class="category">
         <div class="container">
           <div class="category__content">
             <div class="category__item">
@@ -128,13 +128,13 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!----------------------------------------- Category end ------------------------------------>
     </main>
 
     <!------------------------------------------- Footer started ---------------------------------->
-    <footer class="page__footer">
+    <!-- <footer class="page__footer">
       <div class="container">
         <div class="footer__content">
           <form class="footer__form">
@@ -179,7 +179,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <!------------------------------------------------------- Footer finished -------------------------------------------->
   </body>
 </html>
